@@ -1,3 +1,7 @@
+Sun May 19 18:48:39 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/rules: Fix overzealous running of autoheader for every build.
+
 Sun May 19 06:05:24 CDT 2002 Adam Heath <doogie@debian.org>
 
   * configure.in: Split out the -W*-prototype warnings into separate
